--- a/install
+++ b/install
@@ -138,7 +138,7 @@ function installVimCustomisation() {
   # Installing or updating Vim plugins
   if [ ! -d "${VIM_DIR}/bundle" ]; then
     info "Installing vim plugins"
-    vi -u "${VIMRC}" +PluginInstall +qall \
+    vim -u "${VIMRC}" +PluginInstall +qall \
       || error "Could not install vim plugins to ${VIM_DIR}/bundle" && return 1 | log -s
   else
     info "Updating vim plugins"
@@ -158,7 +158,7 @@ function installVimCustomisation() {
 
       [[ "${PIPESTATUS[0]}" -ne 0 ]] && error "Failed to install CommandT; check ${LOGFILE} for details" | log -s
     else
-      warning "rake not installed; skipping command-t"
+      warn "rake not installed; skipping command-t"
     fi
   fi
 
@@ -173,7 +173,7 @@ function installVimCustomisation() {
 
     [[ "${PIPESTATUS[0]}" -ne 0 ]] && error "Failed to install Powerline; check ${LOGFILE} for details" | log -s
   else
-    warning "powerline directory not found, vim may not be installed with python support; skipping powerline" | log -s
+    warn "powerline directory not found, vim may not be installed with python support; skipping powerline" | log -s
   fi
 
   # Install Vimproc
@@ -189,7 +189,7 @@ function installVimCustomisation() {
     ( cd "${VIM_DIR}/bundle/tern_for_vim" && npm install ) | log
     [[ "${PIPESTATUS[0]}" -ne 0 ]] && error "Failed to install Tern" | log
   else
-    warning "npm is not installed, skipping Tern" | log -s
+    warn "npm is not installed, skipping Tern" | log -s
   fi
 
   if [[ ! -L "${install_dir}/bin/thesaurus-lookup.sh" ]]; then
