--- a/install
+++ b/install
@@ -15,6 +15,7 @@ INPUTRC="${install_dir}/.inputrc"
 TMUX_CONF="${install_dir}/.tmux.conf"
 VIMRC="${VIMRC:-${install_dir}/.vimrc}"
 VIM_DIR="${VIM_DIR:-${install_dir}/.vim}"
+ZLOGOUT="${ZLOGOUT:-${install_dir}/.zlogout}"
 ZSHDIR="${ZSHDIR:-${install_dir}/.oh-my-zsh}"
 ZSHRC="${ZSHRC:-${install_dir}/.zshrc}"
 ZSH_CUSTOM="${ZSHDIR}/custom"
@@ -219,6 +220,9 @@ function installZSHCustomisation() {
 
   info "Writing zshrc to ${ZSHRC}" | log -s
   linkfile "${dotfiles}/src/rcfiles/zshrc" "${ZSHRC}" | log
+
+  info "Writing zlogout to ${ZLOGOUT}" | log -s
+  linkfile "${dotfiles}/src/rcfiles/zshrc" "${ZLOGOUT}" | log
 
   local plugin_name
   local -a plugins=(
